deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-frontend
spec:
  selector:
    matchLabels:
      app: sample-app-frontend
  template:
    metadata:
      labels:
        app: sample-app-frontend
    spec:
      containers:
        - name: sample-app-frontend
          image: docker.io/library/docker-kubernetes-sample-app-frontend:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-frontend-service
spec:
  selector:
    app: sample-app-frontend
  ports:
    - port: 80
      targetPort: 3000
